--- a/index.html
+++ b/index.html
@@ -6,18 +6,11 @@
     html,
     body {
       margin: 0;
-      min-height: 100vh;
-    }
-
-    body {
-      display: flex;
-      flex-direction: column;
     }
 
     canvas {
-      width: 100%;
-      height: 100%;
-      flex: 1;
+      height: 100vh;
+      width: 100vw;
     }
   </style>
 </head>
