Split example code from library code

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
   <canvas></canvas>
-  <script src="src/index.ts"></script>
+  <script src="example/index.ts"></script>
 </body>
 
 </html>
